<resources>
    <string name="app_name">divisaschange</string>
    <string name="result">Resultado</string>
    <string name="currency_name">Valor Moneda</string>
    <string name="sterling">Libra esterlina</string>
    <string name="euro">Euro</string>
    <string name="yen">Yen</string>
    <string name="american_dollar">Dolar Americano</string>
    <string name="message_empty_currency">Ingrese el valor del string</string>
</resources>
