<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.capacitaciones.divisaschange.MainActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editTextValueToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_editor_attach_money"
        android:drawableLeft="@drawable/ic_editor_attach_money"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/textViewLabelResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result" />

            <TextView
                android:id="@+id/textViewShowResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewLabelCurrencyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency_name" />

            <TextView
                android:id="@+id/textViewShowCurrencyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonSterling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sterling"/>
    <Button
        android:id="@+id/buttonEuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/euro"/>
    <Button
        android:id="@+id/buttonYen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yen"/>
    <Button
        android:id="@+id/buttonAmericanDollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/american_dollar"/>
</LinearLayout>
